linstaller (1.51.0~pre2-1) emily; urgency=low

  * linstaller_wrapper.sh: launch linstaller with sudo
  * partdisks: added a missing )
  * linstaller_alan.py: fixed command

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 15 Aug 2011 11:11:18 +0200

linstaller (1.51.0~pre1-1) emily; urgency=low

  * Added alan extension and its relevant alan-ext-linstaller package
  * New wrapper for linstaller that displays "Press ENTER to close" if
    linstaller has failed (prevents the immediate destroy of the
    terminal window)
  * Added copyright (python-stdeb didn't have created one :/)
  * Added new live-config-linstaller package.
  * partdisks: do not fail if no swap is available/selected
  * partdisks: mount empty partitions that have "useas" correctly defined
  * linstaller.py: read frontend from command-line args, do not use the
    frontend variable on configuration anymore.
    If -f|--frontend is not specified, default to 'cli'
  * config/semplice-base: removed 'frontend' variable

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 14 Aug 2011 17:39:58 +0200

linstaller (1.50.0-1) emily; urgency=low

  * Build-Depend too on python2.7

 -- Eugenio (g7) <morarossa@gmail.com>  Thu, 11 Aug 2011 18:00:29 +0200

linstaller (1.50.0) emily; urgency=low

  * Initial release.

 -- Eugenio (g7) <morarossa@gmail.com>  Mon, 01 Aug 2011 11:27:24 +0200